--- a/launch.html
+++ b/launch.html
@@ -2,7 +2,7 @@
 <html lang="en"> <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Launching SplitTimeFace...</title> <style>
+    <title>Launching Watch Face Manager...</title> <style>
         /* Стили те же, что и раньше */
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
@@ -49,7 +49,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>SplitTimeFace</h1>
+        <h1>Watch Face Manager</h1>
         <p>Attempting to open the app... If nothing happens, the app might not be installed on your device.</p>
 
         <a id="storeLink" class="store-button" href="https://play.google.com/store/apps/details?id=com.alexeymorozua.splittimeface">
