--- a/launch.html
+++ b/launch.html
@@ -50,7 +50,7 @@
 <body>
     <div class="container">
         <h1>Watch Face Manager</h1>
-        <p>Attempting to open the app... If nothing happens, the app might not be installed on your device.</p>
+        <p>Attempting to open the Watch Face Manager app. If nothing happens, the app might not be installed on your device.</p>
 
         <a id="storeLink" class="store-button" href="https://play.google.com/store/apps/details?id=com.alexeymorozua.splittimeface">
             Install / Open in Google Play
