--- a/launch.html
+++ b/launch.html
@@ -60,7 +60,7 @@
     <script type="text/javascript">
         (function() {
             // --- Укажите ваш URI приложения ---
-            const appUri = "myapp://watchfacemanager"; // <<< УБЕДИТЕСЬ, ЧТО ЗДЕСЬ ПРАВИЛЬНЫЙ URI
+            const appUri = "myapp://open_watch_face_manager"; // <<< УБЕДИТЕСЬ, ЧТО ЗДЕСЬ ПРАВИЛЬНЫЙ URI
             // ---
 
             // JS код остается тем же - пытается открыть приложение
